--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1895,18 +1895,24 @@
 
             idof = []
             jdof = []
-            ('i'..'j').each{|c|
-              name = "#{c}dof"
-              (1..3).each{|x|
-                eval "decl #{name}[#{x-1}] = Int('#{name}#{x}')"
-              }
-            }
-
+            # ('i'..'j').each{|c|
+            #   name = "#{c}dof"
+            #   (1..3).each{|x|
+            #     eval "decl #{name}[#{x-1}] = Int('#{name}#{x}')"
+            #   }
+            # }
+            decl idof = Int("idof", :dim => [Dim(3)])
+            decl jdof = Int("jdof", :dim => [Dim(3)])
         #+END_SRC
 ******* Initialisation
         #+BEGIN_SRC ruby :tangle /tmp/alya.rb 
+          pr dtinv_mod === $dtinv_loc
           pr gpsp1_p === $gpsp1
           pr gpsp1_v === $gpsp1
+          pr gpsp2_v === $gpsp2
+
+          pr If( $kfl_nota1_nsi == 1 => lambda{ pr gpsp1_v === 0.0 } )
+
           pr $elrbp === 0.0
           pr $elrbu === 0.0
           pr $elapp === 0.0
@@ -2102,6 +2108,93 @@
                       pr for1[1]
                     })  
             }
+          end
+        #+END_SRC
+******* Fourth nest
+        #+BEGIN_SRC ruby :tangle /tmp/alya.rb
+          if opts[:nests].include? 4 then
+          exp_fact0 = fact[0] === $gpvol[igaus] * $gpden[igaus] * dtinv_mod[1]            
+          exp_fact1 = fact[1] === fact[0] *$gpsha[inode,igaus]
+
+          for_elauu = []
+          ['i','j'].each{|e|
+            code = <<EOF
+              for_elauu[for_elauu.length] = For(#{e}dime,1,$ndime){
+                pr #{e}dof[#{e}dime] === $ndime*#{e}node-$ndime+#{e}dime
+                if e == 'i' then
+                  pr $elauu[idof[idime],idof[idime]] === $elauu[idof[idime],idof[idime]] + fact[1]
+                else
+                  pr $elauu[idof[jdime],jdof[jdime]] === $elauu[idof[jdime],jdof[jdime]] - fact[1] * $gpsha[jnode,igaus]
+                end
+              }
+          EOF
+          eval code
+          }
+
+          for_elbru = []
+          2.times{|i|
+            for_elbru[i] = For(idime,1,$ndime){
+              pr $elrbu[idime,inode] === $elrbu[idime,inode] - fact[1] * gpveo[idime]
+              pr $elrbu[idime,inode] === $elrbu[idime,inode] + fact[1] * $elvel[idime,inode,2] if i == 0 
+            }
+          }
+
+
+          block1 = lambda{
+            pr For(igaus,1,$pgaus){
+              pr gpveo === 0.0 
+              pr For(inode,1,$pnode){
+                for1 = For(idime,1,$ndime){
+                  pr gpveo[idime] === gpveo[idime] + $elvel[idime,inode,2] * $gpsha[inode,igaus] 
+                }
+                if opts[:unroll] then
+                  pr for1.unroll
+                else
+                  pr for1
+                end
+              }
+              pr exp_fact0
+              pr For(inode,1,$pnode){
+                pr exp_fact1
+                if opts[:unroll] then
+                  pr for_elauu[0].unroll
+                  pr for_elbru[0].unroll
+                else
+                  pr for_elauu[0]
+                  pr for_elbru[0]
+                end
+                pr For(jnode,1,$pnode){
+                  if opts[:unroll] then
+                    pr for_elauu[1].unroll
+                  else
+                    pr for_elauu[1]
+                  end
+                }
+              }
+            }
+          }
+
+          block2 = lambda{
+            pr If($ndime == 2 => lambda{}, :else => block1)
+          }      
+
+          block3 = lambda{
+            pr For(igaus,1,$pgaus){
+              pr exp_fact0
+              pr For(inode,1,$pnode){
+                pr exp_fact1
+                if opts[:unroll] then
+                  pr for_elauu[0].unroll
+                  pr for_elbru[1].unroll
+                else
+                  pr for_elauu[0]
+                  pr for_elbru[1]
+                end
+              }
+            }
+          }
+
+          pr If($kfl_lumped == 1 => block2, $kfl_lumped == 2 => block3)  
           end
         #+END_SRC
 ******* Closing procedure
