--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1844,7 +1844,7 @@
 ******* Fake pabdf_nsi
         #+BEGIN_SRC ruby :tangle /tmp/alya.rb
           def generate_boast_implem(options) 
-            opts = {:vector_length => 1, :preprocessor => false, :nests => (1..10).to_a, :unroll_factor => 1}
+            opts = {:vector_length => 1, :preprocessor => false, :nests => (1..10).to_a, :unroll => false}
             opts.update(options)
 
             x = Int("x", :dir => :in)
@@ -2119,7 +2119,7 @@
           for_elauu = []
           ['i','j'].each{|e|
             code = <<EOF
-              for_elauu[for_elauu.length] = For(#{e}dime,1,$ndime){
+              for_elauu[for_elauu.length] = For(#{e}dime,1,3){
                 pr #{e}dof[#{e}dime] === $ndime*#{e}node-$ndime+#{e}dime
                 if e == 'i' then
                   pr $elauu[idof[idime],idof[idime]] === $elauu[idof[idime],idof[idime]] + fact[1]
@@ -2133,7 +2133,7 @@
 
           for_elbru = []
           2.times{|i|
-            for_elbru[i] = For(idime,1,$ndime){
+            for_elbru[i] = For(idime,1,3){
               pr $elrbu[idime,inode] === $elrbu[idime,inode] - fact[1] * gpveo[idime]
               pr $elrbu[idime,inode] === $elrbu[idime,inode] + fact[1] * $elvel[idime,inode,2] if i == 0 
             }
@@ -2144,7 +2144,7 @@
             pr For(igaus,1,$pgaus){
               pr gpveo === 0.0 
               pr For(inode,1,$pnode){
-                for1 = For(idime,1,$ndime){
+                for1 = For(idime,1,3){
                   pr gpveo[idime] === gpveo[idime] + $elvel[idime,inode,2] * $gpsha[inode,igaus] 
                 }
                 if opts[:unroll] then
