--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1888,19 +1888,8 @@
             decl jdofv     = Int("jdofv")
             decl itime     = Int("itime")
 
-            fact = []
-            (0..8).each{|i|
-              eval "decl fact[#{i}] = Real('fact#{i}', :vector_length => opts[:vector_length])"
-            }
+            decl fact = Real('fact',           :vector_length => opts[:vector_length], :dim => [Dim(8)])
 
-            idof = []
-            jdof = []
-            # ('i'..'j').each{|c|
-            #   name = "#{c}dof"
-            #   (1..3).each{|x|
-            #     eval "decl #{name}[#{x-1}] = Int('#{name}#{x}')"
-            #   }
-            # }
             decl idof = Int("idof", :dim => [Dim(3)])
             decl jdof = Int("jdof", :dim => [Dim(3)])
         #+END_SRC
