--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1846,6 +1846,11 @@
           def generate_boast_implem(options) 
             opts = {:vector_length => 1, :preprocessor => false, :nests => (1..10).to_a, :unroll => false}
             opts.update(options)
+            register_funccall("sqrt")
+            register_funccall("maxval")
+            register_funccall("min")
+            register_funccall("epsilon")
+            register_funccall("tanh")
 
             x = Int("x", :dir => :in)
             y = Real("y")
@@ -2387,6 +2392,60 @@
         #+END_SRC        
 
 ******* Eleventh nest
+        #+BEGIN_SRC ruby :tangle /tmp/alya.rb
+          if opts[:nests].include? 11 then
+            exp_elauq = []
+            exp_elauq[0] = "$elauq[idof[dim],1] === $elauq[idof[dim],1] - fact[1] * $gpcar[idime,inode,igaus]"
+            exp_elauq[1] = "$elauq[idof[dim],1] === $elauq[idof[dim],1] + $gpvol[igaus] * $gpsha[inode,igaus] * $gpcar_bub[idime,igaus]"
+
+            block_igaus = lambda{|dim,exp|
+              return For(igaus,1,$pgaus){
+                pr fact[1] === $gpvol[igaus] * $gpsha_bub[igaus]
+                pr For(inode,1,$pnode){
+                  for_idime = For(idime,1,dim){
+                    pr idof[dim] === (inode-1)*dim + idime
+                    pr eval exp
+                    pr $elaqu[1,idof[dim]] === $elaqu[1,idof[dim]] + fact[1] * $gpcar[idime,inode,igaus]
+                  }
+                  if opts[:unroll] then
+                    pr for_idime.unroll
+                  else
+                    pr for_idime
+                  end
+                }
+              }
+            }
+
+            if opts[:unroll] then
+              if_kfl_press_nsi_1 = If($ndime == 2 => lambda{ pr block_igaus.call(dimensions[0],exp_elauq[0]) }, :else => lambda{ pr block_igaus.call(dimensions[1],exp_elauq[0]) })
+              if_kfl_press_nsi_else = If($ndime == 2 => lambda{ pr block_igaus.call(dimensions[0],exp_elauq[1]) }, :else => lambda{ pr block_igaus.call(dimensions[1],exp_elauq[1]) })
+            else
+              if_kfl_press_nsi_1 = block_igaus.call(dimensions[0],exp_elauq[0])
+              if_kfl_press_nsi_else = block_igaus.call(dimensions[0],exp_elauq[1])
+            end
+
+            pr If(maxval($pbubl) == 1){
+              pr If($kfl_stabi_nsi != -1){
+
+              }
+              
+              pr $elauq === 0.0
+              pr $elapq === 0.0
+              pr $elaqu === 0.0
+              pr $elaqp === 0.0
+              pr $elaqq === 0.0
+              pr $elrbq === 0.0
+
+              pr If($kfl_press_nsi == 1 => lambda{ pr if_kfl_press_nsi_1}, :else => lambda{ pr if_kfl_press_nsi_else })
+
+              pr For(igaus,1,$pgaus){
+                pr $elaqq[1,1] === $elaqq[1,1] + $gpvol[igaus] * $gpsha_bub[igaus] * $penal_nsi
+                pr $elrbq[1]   === $elrbq[1]   + $gpvol[igaus] * $gpsha_bub[igaus] * $penal_nsi * $elbub[1]
+                pr $elrbq[1]   === $elrbq[1]   + $gpvol[igaus] * $gpsha_bub[igaus] * $gprhc[igaus]
+              }
+            }
+          end
+        #+END_SRC        
 ******* Closing procedure
         #+BEGIN_SRC ruby :tangle /tmp/alya.rb
             close p
