corrected 3rd nest

--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -2106,6 +2106,9 @@
                     }, else: lambda{
                       pr for1[1]
                     })  
+              else
+                pr for1[0]
+              end
             }
           end
         #+END_SRC
