--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -2121,7 +2121,7 @@
 
             for_elauu1 = []           
             for_elbru2 = []
-            (2..3).each{|dim|
+            dimensions.each{|dim|
               for_elauu1[for_elauu1.length] = For(idime,1,dim){
                 pr idof[idime] === (inode-1)*dim+idime
                 pr $elauu[idof[idime],idof[idime]] === $elauu[idof[idime],idof[idime]] + fact[1]
@@ -2161,7 +2161,7 @@
                     pr for_elauu1[1].unroll
                     pr for_elbru1.unroll
                   else
-                    pr for_elauu1[1]
+                    pr for_elauu1[0]
                     pr for_elbru1
                   end
                   pr For(jnode,1,$pnode){
@@ -2176,7 +2176,7 @@
             }
 
             block_kfl_lumped_2 = []
-            2.times{|i|
+            dimensions.length.times{|i|
               block_kfl_lumped_2[i] = lambda{
                 pr For(igaus,1,$pgaus){
                   pr exp_fact0
@@ -2195,7 +2195,11 @@
             }
 
             if_kfl_lumped_1 = lambda{ pr If($ndime == 2 => lambda{}, :else => block_kfl_lumped_1) }      
-            if_kfl_lumped_2 = lambda{ pr If($ndime == 2 => block_kfl_lumped_2[0] , :else => block_kfl_lumped_2[1])}
+            if opts[:unroll] then
+              if_kfl_lumped_2 = lambda{ pr If($ndime == 2 => block_kfl_lumped_2[0] , :else => block_kfl_lumped_2[1])}
+            else
+              if_kfl_lumped_2 = block_kfl_lumped_2[0]
+            end
 
             pr If($kfl_lumped == 1 => if_kfl_lumped_1, $kfl_lumped == 2 => if_kfl_lumped_2)  
           end
