--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -2069,8 +2069,7 @@
             }
 
             block4 = lambda{
-              # pr fact[1] === gpvis[1,igaus] * -0.66666668653488159 * gpvol[1,igaus] * gpcar[1,idime,inode,igaus]
-              pr fact[1] === $gpvis[igaus] * (-2.0 / 3.0) * $gpvol[igaus] * $gpcar[idime,inode,igaus]
+              pr fact[1] === (-2.0).to_var / 3.0.to_var * $gpvis[igaus] * $gpvol[igaus] * $gpcar[idime,inode,igaus]
             }
 
             block5 = lambda{
@@ -2300,12 +2299,12 @@
         #+BEGIN_SRC ruby :tangle /tmp/alya.rb
           if opts[:nests].include? 8 then
             for_igaus = For(igaus,1,$pgaus){
-              pr c1[1] === 0.0 
-              pr c2[1] === 0.0 
-              pr c3[1] === 0.0 
+              pr c1[1] === 0.0.to_var 
+              pr c2[1] === 0.0.to_var 
+              pr c3[1] === 0.0.to_var 
               
               pr For(idime,1,$ndime){
-                pr c4[1] === 0.0
+                pr c4[1] === 0.0.to_var
                 pr For(inode,1,$pnode){
                   pr c4[1] === c4[1] + $agrau[inode,igaus] * $elvel[idime,inode,1]
                 }
@@ -2315,15 +2314,14 @@
                 pr c2[1] === c2[1] + c4[1] * c4[1]
               }
 
-              # Impossible to have operator with register functions
               pr c3[1]   === sqrt( c2[1] ) + sqrt( c3[1] )  
               pr c1[1]   === sqrt( c1[1] )
-              pr beta[1] === c1[1] / ( c3[1] + epsilon(1.0) )
+              pr beta[1] === c1[1] / ( c3[1] + epsilon(1.0.to_var) )
 
               pr If($kfl_limit_nsi == 1 => lambda{
-                      pr alpha[1] === min(1.0,(-beta[1]+1.0)*2.0)
+                      pr alpha[1] === min( 1.0.to_var, 2.0.to_var * ( 1.0.to_var - beta[1] ) )
                     }, $kfl_limit_nsi == 2 => lambda{
-                      pr alpha[1] === (tanh((beta[1]-0.8)*20.0)+1.0)*0.5
+                      pr alpha[1] === 0.5.to_var * ( tanh( 20.0.to_var * ( beta[1] - 0.8.to_var ) ) + 1.0.to_var )
                     })
               pr For(idime,1,$ndime){
                 pr $gpvep[idime,igaus] === alpha[1] * $gpvep[idime,igaus]
